[package]
name = "super_breakout"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["debug"] }
bevy_input = { version = "0.19.0" }
bevy_enhanced_input = { version = "0.26.0" }
avian2d = { version = "0.7.0" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
